--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <div class="item">
                             <div class="item-content">
                                 <div class="image">
-                                    <img src="Homepage/facewash.png" alt="product image">
+                                    <img src="HomePage/facewash.png" alt="product image">
                                 </div>
                                 <div class="item-btns">
                                     <button type="button" class="btn-buy">Buy Now
